fix zoomies on mobile device

--- a/src/less/App.less
+++ b/src/less/App.less
@@ -6,6 +6,10 @@ body {
     input{
         font-size:16px;
     }    
+
+    select {
+        font-size:16px;
+    }
 }
 
 a:link {
